# clawdex

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  BASELINE.md  CLAUDEmd  COMPATIBILITY.md  HARDEN_DEEPTHINK.md  MAC_APP.md  PLUGINS.md  README.md  REVIEW.md  ROADMAP.md  STATUS.md  TEMPLATE_PACK.md  WORK.md
.github/workflows/: clawhatch-security-self-hosted.yml  clawhatch-security.yml
clawd-macos-app-starter/: .gitignore  README.md  project.yml
clawd-macos-app-starter/Docs/: APP_STORE_NOTES.md  RUNTIME_PROTOCOL.md
clawd-macos-app-starter/Scripts/: build_and_embed_rust.sh
clawdex/: Cargo.toml
clawdex/share/src/: app_server.rs  artifacts.rs  cron.rs  daemon.rs  daemon_client.rs  daemon_server.rs  lib.rs  main.rs  mcp.rs  memory.rs  permissions.rs  plugins.rs  runner.rs  tasks.rs  ui_bridge.rs  util.rs
clawdex/src/: admin_dashboard.html  app_server.rs  approvals.rs  artifacts.rs  audit.rs  config.rs  cron.rs  daemon.rs  daemon_client.rs  daemon_server.rs  gateway.rs  heartbeat.rs  lib.rs  main.rs  mcp.rs  memory.rs  permissions.rs  plugins.rs  policies.rs  runner.rs  sessions.rs  skill_renderer.rs  skills_sync.rs  task_db.rs  tasks.rs  text_sanitize.rs  ui_bridge.rs  util.rs
clawdex/src/claude_plugins/: schema.rs
clawdex/tests/: audit_log.rs  compat_scenarios.rs  memory_embeddings.rs
compat/: README.md  clawd-compat.yaml  parity-delta.md  skills-inventory.yaml
compat/routing/: routes.example.json  routes.schema.json
compat/tests/: matrix.md
compat/tool-schemas/: artifact.create_docx.request.schema.json  artifact.create_pptx.request.schema.json  (+28 more)
docs/: CLAWDEX_KLINE_AGENT_BACKEND.md  CR-PLUGINS-001.md  DiffPlan-ClaudePlugins.md
docs/ai/: system_map.yaml  (+1 more)
macClawdex/: README.md  project.yml
(+46 files in other folders)
