[package]
name = "clawdex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
cron = "0.12"
walkdir = "2"
flate2 = "1"
tar = "0.4"
zip = "2.4.2"
dirs = "5"
serde_yaml = "0.9"
tiny_http = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
globset = "0.4"
tungstenite = "0.23"
jsonschema = "0.17"
rust_xlsxwriter = "0.93"
ppt-rs = "0.2.3"
docx = "1.1.2"
printpdf = "0.7"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
codex-app-server-protocol = { path = "../codex/codex-rs/app-server-protocol" }
codex-protocol = { path = "../codex/codex-rs/protocol" }
codex-utils-absolute-path = { path = "../codex/codex-rs/utils/absolute-path" }

[patch.crates-io]
jetscii = { path = "vendor/jetscii" }
